# DirectXTest

./: CMakeLists.txt  Main.cpp  NodeUI.cpp  NodeUI.h  bootstrap.bat  vcpkg-update.bat  vcpkg.json
Renderer/: IRenderer.h
Shaders/: TrianglePS.hlsl  TriangleVS.hlsl
src/examples/: CMakeLists.txt  color.h  ray.h  rt_01_ppm.cpp  rt_01_ppm.h  vec3.h
